--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - .env
     volumes:
       - .:/my-app
-    command: chainlit run mem-app.py --host 0.0.0.0 --port 8000 -w
+    command: chainlit run app.py --host 0.0.0.0 --port 8000 -w
