--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   my-app:
     build: .
     ports:
-      - "8000:8000"
+      - "7860:7860"
     env_file:
       - .env
     volumes:
-      - .:/my-app
-    command: chainlit run app.py --host 0.0.0.0 --port 8000 -w
+      - .:/app
+    command: ["chainlit", "run", "app.py", "--host", "0.0.0.0", "--port", "7860"]
