--- a/requirements.txt
+++ b/requirements.txt
@@ -95,6 +95,7 @@ langchain-community==0.3.19
 langchain-core==0.3.41
 langchain-google-community==2.0.7
 langchain-groq==0.2.4
+langchain-huggingface==0.1.2
 langchain-ollama==0.2.2
 langchain-openai==0.3.1
 langchain-text-splitters==0.3.6
